client/landing/stepper/declarative-flow/internals/steps-repository/sensei-setup/style.scss
@import "@wordpress/base-styles/breakpoints";
@import "../../sensei-variables";

.sensei-setup {

	.sensei-start-row {
		display: flex;
		width: 1440px;
		padding: 24px;
		flex: 1;

		@media ( max-width: $break-huge ) {
			width: $break-wide;
		}
		@media ( max-width: $break-wide ) {
			width: $break-xlarge;
		}
		@media ( max-width: $break-xlarge ) {
			width: $break-large;
		}
		@media ( max-width: $break-large ) {
			width: 100%;
			padding: 24px 24px 0 24px;
		}
	}

	.sensei-onboarding-main-content {
		display: flex;
		flex-direction: column;
		padding-bottom: 24px;
		padding-top: 64px;
		padding-right: 20px;
		position: relative;
		width: 415px;

		h1 {
			width: 60%;

			@media ( max-width: $break-large ) {
				width: 100%;
			}
		}
		@media ( max-width: $break-large ) {
			margin: 0 auto;
			padding: 0;
			width: 100%;
			max-width: 450px;
		}

		// Thumbnails

		.green {
			background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-style-1.png);

			@media ( max-width: $break-large ) {
				background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-style-1-small.png);
			}
		}

		.blue {
			background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-style-2.png);

			@media ( max-width: $break-large ) {
				background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-style-2-small.png);
			}
		}

		.dark {
			background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-style-3.png);

			@media ( max-width: $break-large ) {
				background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-style-3-small.png);
			}
		}

		.gold {
			background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-style-4.png);

			@media ( max-width: $break-large ) {
				background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-style-4-small.png);
			}
		}
	}

	.sensei-theme-style-selector {
		display: grid;
		grid-template-columns: 1fr 1fr;
		margin: 24px auto;
		gap: 20px;

		@media ( max-width: $break-large ) {
			grid-template-columns: 1fr 1fr 1fr 1fr;
			column-gap: 15px;
		}
	}

	.sensei-theme-prompt {
		p {
			margin-top: 0;
		}
	}

	.form-radio-with-thumbnail {
		display: grid;

		.form-label {
			margin: 0;
		}
		.form-radio,
		.form-radio__label {
			position: absolute;
			width: 0;
			height: 0;
			opacity: 0;
		}
	}

	.form-radio-with-thumbnail__thumbnail.checked {
		box-shadow: 0 0 0 1px #000, 0 1px 2px var(--color-neutral-0);
	}

	.form-radio-with-thumbnail__thumbnail {
		width: 180px;
		height: 110px;
		margin: 0;

		@media ( max-width: $break-large ) {
			width: 100%;
			height: auto;
			aspect-ratio: 76/60;
		}
	}

	.sensei-theme-previews {
		flex: 1;
		overflow: hidden;
		position: relative;
		align-self: stretch;
		padding: 20px;

		@media ( max-width: $break-large ) {
			width: 100%;
			height: auto;
			max-height: 810px;
			flex: 1 1 0;
			margin: 10px auto 0 auto;
			border-bottom: 0;
			border-radius: 36px 36px 0 0; /* stylelint-disable-line scales/radii */
			padding: 20px;
		}
		@media ( max-width: $break-mobile ) {
			width: 90%;
			max-height: 50vh;
		}

	}

	.sensei-theme-item {
		width: 100%;
		&:not(.selected) {
			display: none;
		}
		@media ( min-width: $break-large ) {
			transition: all 0.36s ease-in-out;
			&:not(.selected) {
				transform: scale(0.75);
				display: inline-block;
			}
		}

		display: inline-block;
	}

	.sensei-theme-list {
		position: relative;
		white-space: nowrap;
		line-height: 0;

		@media ( min-width: $break-large ) {
			transition: all 0.36s ease-in-out;
			left: calc((var(--index) - 1) * -100%);
			height: 100%;
			display: flex;
			align-items: stretch;
			width: 400%;
		}
	}

	.sensei-theme {
		width: 100%;
		height: 100%;
		border-radius: 36px; /* stylelint-disable-line scales/radii */
		border: 15px solid #f8f8f8;
		box-shadow: 0 15px 20px rgba(0, 0, 0, 0.04), 0 13px 10px rgba(0, 0, 0, 0.03), 0 6px 6px rgba(0, 0, 0, 0.02);

		background-size: cover;
		background-repeat: no-repeat;

		&.green {
			background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-green.jpg);

			@media ( max-width: $break-huge ) {
				background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-green-1200.jpg);
			}
			@media ( max-width: $break-wide ) {
				background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-green-1080.jpg);
			}
		}

		&.blue {
			background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-blue.jpg);

			@media ( max-width: $break-huge ) {
				background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-blue-1200.jpg);
			}
			@media ( max-width: $break-wide ) {
				background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-blue-1080.jpg);
			}
		}

		&.dark {
			background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-dark.jpg);

			@media ( max-width: $break-huge ) {
				background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-dark-1200.jpg);
			}
			@media ( max-width: $break-wide ) {
				background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-dark-1080.jpg);
			}
		}

		&.gold {
			background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-gold.jpg);

			@media ( max-width: $break-huge ) {
				background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-gold-1200.jpg);
			}
			@media ( max-width: $break-wide ) {
				background-image: url(calypso/assets/images/sensei-onboarding/sensei-theme-gold-1080.jpg);
			}
		}

		@media ( max-width: $break-large ) {
			background-size: contain;
			height: 779px;
		}
	}

	.sensei-style-notice {
		color: #50575e;
		margin: 10px auto;
		/* stylelint-disable-next-line declaration-property-unit-allowed-list */
		font-size: 14px;
		line-height: 24px;

		svg {
			fill: #50575e;
			vertical-align: bottom;
			margin-right: 5px;
		}
	}

	button {

		@media ( max-width: $break-large ) {
			margin-top: 20px;
		}
	}
}

